--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,9 +184,15 @@ body{
     margin-top: 50px;
 }
 
+.contrainer-5{
+    margin: auto;
+    width
+}
+
 .equipment h1{
     background: black;
     padding:10px;
+    font-size:30px;
     border-radius: 5px 50px;
     border-left: 10px solid rgb(182, 159, 27) ;
     border-right: 10px solid rgb(182, 159, 27);
